SynProdGITV1/force-app/main/default/objects/Salesforce_Order_Type_Determination__c/Salesforce_Order_Type_Determination__c.object-meta.xml
<CustomObject>
    <description>Object to store the mapping between Sample Product and &quot;Plant, Salesforce order type, Sales Area, etc&quot;</description>
    <label>Salesforce Order Type Determination Data</label>
    <nameField>
        <displayFormat>SOT-{00000000}</displayFormat>
        <label>Salesforce Order Type Determinat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Order Type Determination</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>