SynProdGITV1/force-app/main/default/objects/Salesforce_Order_Type_Determination__c/fields/Default_Product__c.field-meta.xml
<CustomField>
    <fullName>Default_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Salesforce_Order_Types</relationshipName>
    <type>Lookup</type>
</CustomField>