SynProdGITV1/force-app/main/default/objects/Salesforce_Order_Type_Determination__c/fields/One_Time_Customer_ID_Domestic__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Customer_ID_Domestic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>One-Time Customer ID Domestic</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Salesforce_Order_Types</relationshipName>
    <type>Lookup</type>
</CustomField>