SynProdGITV1/force-app/main/default/objects/Salesforce_Order_Type_Determination__c/fields/Plant_ID__c.field-meta.xml
<CustomField>
    <fullName>Plant_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to plant data</description>
    <label>Plant ID</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipName>Salesforce_Order_Types</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>