SynProdGITV1/force-app/main/default/objects/Salesforce_Order_Type_Determination__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Sales org data object</description>
    <label>Sales Org</label>
    <referenceTo>Sales_Org_Data__c</referenceTo>
    <relationshipName>Salesforce_Order_Types</relationshipName>
    <type>Lookup</type>
</CustomField>