SynProdGITV1/force-app/main/default/objects/Salesforce_Order_Type_Determination__c/fields/Salesforce_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Order_Type__c</fullName>
    <label>Salesforce Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salesforce_Order_Type</valueSetName>
    </valueSet>
</CustomField>