SynProdGITV1/force-app/main/default/objects/Salesforce_Order_Type_Determination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plant_ID__c</columns>
    <columns>Salesforce_Order_Type__c</columns>
    <columns>Default_Product__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Distribution_Channel__c</columns>
    <columns>Division__c</columns>
    <columns>Shipping_Condition__c</columns>
    <columns>Delivery_Block__c</columns>
    <columns>One_Time_Customer_ID_Domestic__c</columns>
    <columns>One_Time_Customer_ID_International__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>